alignment issue fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -418,6 +418,9 @@ body.menu-active #Header .logo {
   -webkit-transition: all 350ms ease;
   transition: all 350ms ease;
 }
+#OurWork .filter-box .each-box.media {
+	display: block;
+}
 #OurWork .filter-box .scale-anm {
 	transform: scale(1);
 }
